--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,17 @@
-dist: xenial
+dist: bionic
 language: ruby
-rvm: 2.6.3
+rvm: 2.7
 gemfile:
   - Gemfile
 services:
   - postgresql
 addons:
-  apt:
-    packages:
-      - postgresql-server-dev-9.6
+  postgresql: 10
 script: bundle exec rake test
 before_install:
   - git clone https://github.com/HypoPG/hypopg.git
   - cd hypopg
-  - git checkout 1.1.2
+  - git checkout 1.1.3
   - make
   - sudo make install
   - createdb dexter_test
