--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,15 +9,16 @@ jobs:
         include:
         - postgres: 13
           ruby: 2.7
+          runs-on: ubuntu-20.04
         - postgres: 12
           ruby: 2.6
-        - postgres: 11
-          ruby: 2.5
-        - postgres: 10
-          ruby: 2.4
-        - postgres: 9.6
-          ruby: 2.3
-    runs-on: ubuntu-latest
+        # - postgres: 11
+        #   ruby: 2.5
+        # - postgres: 10
+        #   ruby: 2.4
+        # - postgres: 9.6
+        #   ruby: 2.3
+    runs-on: ${{ matrix.runs-on || 'ubuntu-latest' }}
     steps:
     - uses: actions/checkout@v2
     - uses: ruby/setup-ruby@v1
