--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,6 +28,7 @@ jobs:
       with:
         postgres-version: ${{ matrix.postgres }}
     - run: |
+        sudo apt-get update
         sudo apt-get install postgresql-server-dev-${{ matrix.postgres }}
         git clone https://github.com/HypoPG/hypopg.git
         cd hypopg
