--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,21 +2,22 @@ name: build
 on: [push, pull_request]
 jobs:
   build:
-    if: "!contains(github.event.head_commit.message, '[skip ci]')"
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
         include:
+        - postgres: 14
+          ruby: 3.1
         - postgres: 13
-          ruby: 3.0
+          ruby: "3.0"
         - postgres: 12
           ruby: 2.7
         - postgres: 11
           ruby: 2.6
         - postgres: 10
           ruby: 2.5
-        - postgres: 9.6
+        - postgres: 10
           ruby: 2.4
     steps:
     - uses: actions/checkout@v2
