--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,6 +7,8 @@ jobs:
       fail-fast: false
       matrix:
         include:
+        - postgres: 15
+          ruby: 3.1
         - postgres: 14
           ruby: 3.1
         - postgres: 13
@@ -18,7 +20,7 @@ jobs:
         - postgres: 10
           ruby: 2.5
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - uses: ruby/setup-ruby@v1
       with:
         ruby-version: ${{ matrix.ruby }}
