--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,35 +7,34 @@ jobs:
       fail-fast: false
       matrix:
         include:
-        - postgres: 15
-          ruby: 3.1
-        - postgres: 14
-          ruby: 3.1
-        - postgres: 13
-          ruby: "3.0"
-        - postgres: 12
-          ruby: 2.7
-        - postgres: 11
-          ruby: 2.6
-        - postgres: 10
-          ruby: 2.5
+          - postgres: 15
+            ruby: 3.2
+          - postgres: 14
+            ruby: 3.1
+          - postgres: 13
+            ruby: "3.0"
+          - postgres: 12
+            ruby: 2.7
+          - postgres: 11
+            ruby: 2.6
+          - postgres: 10
+            ruby: 2.5
     steps:
-    - uses: actions/checkout@v3
-    - uses: ruby/setup-ruby@v1
-      with:
-        ruby-version: ${{ matrix.ruby }}
-        bundler-cache: true
-    - uses: ankane/setup-postgres@v1
-      with:
-        postgres-version: ${{ matrix.postgres }}
-    - run: |
-        sudo apt-get update
-        sudo apt-get install postgresql-server-dev-${{ matrix.postgres }}
-        git clone https://github.com/HypoPG/hypopg.git
-        cd hypopg
-        git checkout 1.3.1
-        make
-        export PG_CONFIG=`which pg_config`
-        sudo --preserve-env=PG_CONFIG make install
-        createdb dexter_test
-    - run: bundle exec rake test
+      - uses: actions/checkout@v3
+      - uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: ${{ matrix.ruby }}
+          bundler-cache: true
+      - uses: ankane/setup-postgres@v1
+        with:
+          postgres-version: ${{ matrix.postgres }}
+          database: dexter_test
+          dev-files: true
+      - run: |
+          git clone https://github.com/HypoPG/hypopg.git
+          cd hypopg
+          git checkout 1.3.1
+          make
+          export PG_CONFIG=`which pg_config`
+          sudo --preserve-env=PG_CONFIG make install
+      - run: bundle exec rake test
