--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,9 +31,9 @@ jobs:
           database: dexter_test
           dev-files: true
       - run: |
-          git clone https://github.com/HypoPG/hypopg.git
-          cd hypopg
-          git checkout 1.3.1
+          cd /tmp
+          curl -L https://github.com/HypoPG/hypopg/archive/1.3.1.tar.gz | tar xz
+          cd hypopg-1.3.1
           make
           export PG_CONFIG=`which pg_config`
           sudo --preserve-env=PG_CONFIG make install
