--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,6 +30,8 @@ jobs:
           postgres-version: ${{ matrix.postgres }}
           database: dexter_test
           dev-files: true
+          config: |
+            shared_preload_libraries = 'pg_stat_statements'
       - run: |
           cd /tmp
           curl -L https://github.com/HypoPG/hypopg/archive/1.3.1.tar.gz | tar xz
