--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,7 +39,8 @@ jobs:
           make
           export PG_CONFIG=`which pg_config`
           sudo --preserve-env=PG_CONFIG make install
-      - run: |
+      - if: ${{ matrix.postgres >= 14 }}
+        run: |
           cd /tmp
           curl -L https://github.com/percona/pg_stat_monitor/archive/1.1.1.tar.gz | tar xz
           cd pg_stat_monitor-1.1.1
