--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,6 +7,8 @@ jobs:
       fail-fast: false
       matrix:
         include:
+          - postgres: 16
+            ruby: 3.2
           - postgres: 15
             ruby: 3.2
           - postgres: 14
